fixing problem of simultaneous collapsing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="nav" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".top">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -32,9 +32,9 @@
                 </button>
                 <a class="navbar-brand" href="#">Dheeraj Mittal</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse top collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="#intro">Introduction</a> </li>
+                <li ><a href="#intro">Introduction</a> </li>
                 <li><a href="#mytech">My Technology</a> </li>
                 <li><a href="#experience">Experience</a> </li>
                 <li><a href="#contact"> Contact</a> </li>
@@ -45,7 +45,7 @@
      <div id="nav" class="navbarbottom navbar-default navbar-fixed-bottom">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".bottom">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -53,7 +53,7 @@
                 </button>
                 <a class="navbar-brand social" href="#">Social Profile</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse bottom collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="https://www.facebook.com/dheerajmitta99" class="fa fa-facebook fa-2x" target="_blank"></a></li>
                 <li><a href="https://www.linkedin.com/in/dheeraj-mittal" class="fa fa-linkedin fa-2x" target="_blank"></a></li>
@@ -66,7 +66,7 @@
     <div id="intro" class="header">
         <div class="container">
             <div class="row">
-                <img src="image/dm1.jpg" /><br>
+                <img src="image/dm1.jpg" class="img-responsive" /><br>
                 <h1> A brief Introduction</h1><br>
            </div>
             <div class="row1">
