--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <h4>WedMeGood Tech Private Limited</h4>
                         <h5>6/2018-6/2018</h5>
                         <h4>Achievement/Tasks</h4>
-                        <li><p><b>2</b>- I wrote testing automation scripts for wedmegood.com in java using Selenium from scratch and created a well structured test suite for nightly build.</p></li>
+                        <li><p><b>1</b>- I wrote testing automation scripts for wedmegood.com in java using Selenium from scratch and created a well structured test suite for nightly build.</p></li>
                         <li><p><b>2</b>- I also created a ELK setup and sent the user access logs to S3 and other system logs to ElasticSearch.</p></li>
                         <li><b style="font-size: 22px">Contact:</b><b style="font-family: monospace"> Anil Kundu –</b> anil_kundu@wedmegood.com</li>
                     </div>
@@ -172,7 +172,21 @@
             </div>
         </div>
     </div>
-    
+    <!--- Experience ends here --->
+    <div id=contact class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12" >
+                   <div class="cont">
+                    <h4>Contact US</h4>
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>  Mathura, India</p>
+                    <p><i class="fa fa-envelope" aria-hidden="true"></i> dheerajmittal99@gmail.com</p>
+                    <p><i class="fa fa-mobile" aria-hidden="true"></i>  (+91)892-383-0555</p>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
