--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12" >
                    <div class="cont">
-                    <h4>Contact US</h4>
+                    <h4>Contact Me</h4>
                     <p><i class="fa fa-map-marker" aria-hidden="true"></i>  Mathura, India</p>
                     <p><i class="fa fa-envelope" aria-hidden="true"></i> dheerajmittal99@gmail.com</p>
                     <p><i class="fa fa-mobile" aria-hidden="true"></i>  (+91)892-383-0555</p>
